2007-09-06  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-docbook.c:
	- Pass the computed chunk depth to the stylesheets

2007-09-06  Don Scorgie  <dscorgie@svn.gnome.org>

	* stylesheets/toc2html.xsl:
	* stylesheets/info2html.xsl:
	* stylesheets/man2html.xsl:
	Respect theme settings again

2007-09-05  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-transform.c: 
	Fix potential crasher in transform + various
	other minor fixes
	(based on patch from Hans Petter Jansson - bug #469436)

	* src/yelp-window.c:
	Fix potential abuse of freed strings
	(patch from Hans Petter Jansson - bug #469438)
	
	* data/icons/yelp-icon-big.png:
	New tango-ified version

2007-09-03  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-utils.c:
	If mime type isn't detected, don't crash
	bug #472128 based on patch by Hans Petter Jansson
	
	* src/yelp-debug.c:
	* src/yelp-search-parser.c:
	C89 fixes from Jens Granseuer (bug #472489)

2007-08-30  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Removing a debugging printf I'd accidentally left in

2007-08-30  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Use g_filename_to_uri to ensure file URIs are right, fixed broken figures

2007-08-20  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/yelp-settings.c:
	* src/yelp-settings.h:
	- Make the icons respect the theme again

2007-08-17  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-settings.c:
	* stylesheets/yelp-common.xsl:
	* stylesheets/db2html.xsl.in:
	- Themed colors and some CSS customizations

==================== 2.19.90 ====================

2007-08-13  Don Scorgie  <dscorgie@svn.gnome.org>

	* configure.in:
	* NEWS:
	Bump to version 2.19.90
	
	* Makefile.am: 
	s/yelp.desktop.in/yelp.desktop.in.in/
	Fixes distcheck (1) - other is in po/ChangeLog
	(Rodney Dawes)
	
2007-08-12  Don Scorgie  <dscorgie@svn.gnome.org>

	* src/yelp-window.c: 
	When no frag specified, use x-yelp-index instead
	of index as this breaks some documents
